# xppython3-headless-dev

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
Tools/: generate_fake_xp_interface.py
docs/: AI_CODING_GUIDE.md  DATAREF_MODEL.md  DEVELOPER_NOTES.md  GUI_EMULATION.md  PYCHARM_CONFIGURATION.md
plugins/: PI_ss_OTA.py  PI_sshd_OAT.py  PI_sshd_OTA.py  PI_sshd_dataref_bridge.py  PI_sshd_dataref_viewer.py  PI_sshd_dev_oat_gui.py  PI_sshd_dev_ota_gui.py  PI_sshd_oat_gui.py  dev_ota_gui.py  xp.pyi
plugins/PythonPlugins/: PI_sshd_gui_sample.py  PI_sshd_oat_gui.py
plugins/extensions/: datarefs.py  xp_interface.py
plugins/extlibs/: ss_serial_device.py
plugins/sshd_extensions/: bridge_protocol.py  dataref_manager.py  datarefs.py  fake_xp_interface.py  xp_bridge_protocol.py  xp_interface.py
plugins/sshd_extlibs/: dataref_viewer.py  serial_device.py  ss_serial_device.py
simless/: DataRefCache.txt  __init__.py  run_bridge_client.py  run_bridged_oat.py  run_gui_sample.py  run_noaa.py  run_oat.py  run_oat_control.py  run_ota.py  run_ota_gui.py  run_standalone_oat.py  test.py
simless/libs/: bridge_client.py  constants.py  dataref.py  dataref_viewer.py  fake_xp.py  fake_xp.pyi  fake_xp_command.py  fake_xp_constants.py  fake_xp_dataref.py  input.py  (+30 more)
tests/: conftest.py  test_bridge_protocol.py  test_dataref_manager.py  test_datarefs.py  test_fake_xp_dataref.py  test_fake_xp_graphics.py  test_fakexp.py  test_headless_plugins.py  test_managed_datarefs_plugin_usage.py  test_unmanaged_datarefs_plugin_usage.py
tools/: generate_fake_xp_interface.py
(+17 files in other folders)
